--- a/frontend/src/app/features/events/discover/discover.component.scss
+++ b/frontend/src/app/features/events/discover/discover.component.scss
@@ -1,12 +1,8 @@
 :host {
     display: block;
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding-left: 256px;
-    padding-top: 64px;
+    position: relative;
 }
 
 .hide-scrollbar {
